bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Execution Plan, Object ID).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(label) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as label]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(ENC_TF(ENC_PT(label)))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(ENC_TF(ENC_PT(label)))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(ENC_TF(ENC_PT(label))), product@1 as product], aggr=[first_value(product) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(label) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(ENC_TF(ENC_PT(label@1))) as __common_expr_1, product@0 as product, label@1 as label]
        SortExec: expr=[ENC_SORT(ENC_TF(ENC_PT(label@1))) ASC], preserve_partitioning=[false]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable
                  FilterExec: DynamicFilter [ product@0 >= 0 AND product@0 <= 82565 AND hash_lookup ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 0 AND product@0 <= 82565 AND hash_lookup ]]
                FilterExec: DynamicFilter [ product@0 >= 14768 AND product@0 <= 23080 AND product@0 IN (SET) ([14768, 17181, 17263, 17274, 17287, 19292, 19354, 19365, 19382, 21224, 21229, 21256, 21319, 21337, 21379, 21395, 23070, 23080]) ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 14768 AND product@0 <= 23080 AND product@0 IN (SET) ([14768, 17181, 17263, 17274, 17287, 19292, 19354, 19365, 19382, 21224, 21229, 21256, 21319, 21337, 21379, 21395, 23070, 23080]) ]]
              FilterExec: DynamicFilter [ product@0 >= 19292 AND product@0 <= 21319 AND product@0 IN (SET) ([19292, 21319]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 19292 AND product@0 <= 21319 AND product@0 IN (SET) ([19292, 21319]) ]]
            FilterExec: EBV(GT(ENC_TF(value1@1), 4:4:136)), projection=[product@0]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?value1], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
