bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST]@2 as product, first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST]@3 as label]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(ENC_TF(label))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(ENC_TF(label))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(ENC_TF(label)), product@1 as product], aggr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) as __common_expr_1, product@0 as product, label@1 as label]
        SortExec: expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[product@0 as product, label@2 as label]
            DecodeObjectIdsExec: projections=[decode(product) as product, value1, decode(label) as label]
              FilterExec: EBV(GT(ENC_TF(value1@1), 4:4:136))
                DecodeObjectIdsExec: projections=[product, decode(value1) as value1, label]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, value1@1, label@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, value1@1, label@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, value1@2]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 65, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 65 AND 65 <= object_max@6, required_guarantees=[object in (65), predicate in (1609)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 153 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 153 AND 153 <= object_max@6, required_guarantees=[object in (153), predicate in (14913)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?value1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product, object@3 as value1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14905 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14905 AND 14905 <= predicate_max@2, required_guarantees=[predicate in (14905)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product, object@3 as label], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 5374 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 5374 AND 5374 <= object_max@6, required_guarantees=[object in (5374), predicate in (14913)]
