bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST]@2 as product, first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST]@3 as label]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(ENC_TF(label))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(ENC_TF(label))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(ENC_TF(label)), product@1 as product], aggr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) as __common_expr_1, product@0 as product, label@1 as label]
        SortExec: expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[product@0 as product, label@1 as label]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, value1@3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                    ProjectionExec: expr=[subject@0 as product, object@1 as label]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:}, projection=[subject@1, object@3]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:} AND {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:})]
                    ProjectionExec: expr=[subject@0 as product]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66,data_type:,language_tag:}, projection=[subject@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:})]
                  ProjectionExec: expr=[subject@0 as product]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3,data_type:,language_tag:}, projection=[subject@1]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:})]
                ProjectionExec: expr=[subject@0 as product]
                  FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967,data_type:,language_tag:}, projection=[subject@1]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:})]
              ProjectionExec: expr=[subject@0 as product, object@1 as value1]
                FilterExec: EBV(GT(ENC_TF(object@3), 4:4:136)) AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?value1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1,data_type:,language_tag:})]
